Memoria practicamente terminada

--- a/Memoria/capitulos/03_Requisitos.tex
+++ b/Memoria/capitulos/03_Requisitos.tex
@@ -152,8 +152,8 @@ En esta sección se presentan los requisitos relacionados con las funcionalidade
           \end{itemize}
     \item \textbf{Usuarios}
           \begin{itemize}
-              \item \textbf{RF 3 - Consultar datos de la cuenta: }Los usuarios podrán consultar los datos de su perfil.
-              \item \textbf{RF 4 - Modificar datos de la cuenta: }Los usuarios podrán modificar los datos de su perfil (imagen de perfil, nombre, contraseña...).
+              \item \textbf{RF 3 - Consultar datos del perfil: }Los usuarios podrán consultar los datos de su perfil.
+              \item \textbf{RF 4 - Modificar datos del perfil: }Los usuarios podrán modificar los datos de su perfil (imagen de perfil, nombre, contraseña...).
               \item \textbf{RF 5 - Selección de lección: }Los usuarios podrán seleccionar la lección a estudiar de la lista de lecciones de la pantalla principal.
               \item \textbf{RF 6 - Responder preguntas: }Los usuarios podrán responder las preguntas de cada tipo en la lección que estén.
                     \begin{itemize}
@@ -161,13 +161,12 @@ En esta sección se presentan los requisitos relacionados con las funcionalidade
                         \item \textbf{RF 6.2 - Responder seleccionando varias opciones: }Los usuarios podrán responder preguntas que necesiten seleccionar varias opciones de un conjunto.
                         \item \textbf{RF 6.3 - Responder seleccionando una opción: }Los usuarios podrán responder preguntas que necesiten seleccionar una opción de un conjunto.
                         \item \textbf{RF 6.4 - Responder tocando una nota: }Los usuarios podrán responder preguntas que necesiten tocar una nota de un instrumento y captarla por el micrófono.
-                    \end{itemize}
-
-              \item \textbf{RF7 - Consultar ranking: }Los usuarios podrán consultar la clasificación global de los usuarios.
-              \item \textbf{RF8 - Consultar progreso de perfil: } Los usuarios podrán consultar su progreso y sus logros obtenidos en su perfil.
-              \item \textbf{RF9 - Consultar perfiles ajenos: } Los usuarios podrán visualizar el perfil de otros usuarios y ver sus logros.
-              \item \textbf{RF22 - Consultar progreso de lección: } Los usuarios podrán consultar el progreso de una lección en concreto.
-
+                    \end{itemize}º
+              \item \textbf{RF 7 - Ver información de logro: }Los usuarios podrán consultar la información de un logro
+              \item \textbf{RF 8 - Consultar logros del usuario: } Los usuarios podrán consultar los logros obtenidos en su perfil.
+              \item \textbf{RF 9 - Consultar historial de tests: } Los usuarios podrán visualizar la lista de tests realizados de una lección en concreto.
+              \item \textbf{RF 27 - Revisar test}: Los usuarios podrán revisar las respuestas de un test realizado. 
+              \item \textbf{RF 22 - Consultar progreso de lección: } Los usuarios podrán consultar el progreso de una lección en concreto.
             \end{itemize}
     \item \textbf{Profesores/Encargados}
           \begin{itemize}
@@ -186,6 +185,10 @@ En esta sección se presentan los requisitos relacionados con las funcionalidade
               \item \textbf{RF 19 - Crear usuario: }Los administradores podrán crear usuarios en el sistema.
               \item \textbf{RF 20 - Obtener lista de usuarios: } Los administradores podrán obtener una lista con todos los usuarios registrados en el sistema.
               \item \textbf{RF 21 - Eliminar usuario: }Los administradores podrán eliminar usuarios registrados en el sistema.
+              \item \textbf{RF 23 - Modificar datos de logro: }Los administradores podrán modificar los datos de un usuario.
+              \item \textbf{RF 24 - Crear logro: }Los administradores podrán crear usuarios en el sistema.
+              \item \textbf{RF 25 - Obtener lista de logros: } Los administradores podrán obtener una lista con todos los usuarios registrados en el sistema.
+              \item \textbf{RF 26 - Eliminar logro: }Los administradores podrán eliminar usuarios registrados en el sistema.
           \end{itemize}
 \end{itemize}
 
