--- a/Memoria/capitulos/04_Planificacion.tex
+++ b/Memoria/capitulos/04_Planificacion.tex
@@ -90,29 +90,33 @@ A continuación, se listarán todas las historias de usuario ordenadas por prior
     \item \textbf{HU8 - } Como usuario quiero responder una pregunta de un test del tipo selección múltiple. (Prioridad: Alta | Puntos de Historia: 1)
     \item \textbf{HU9 - } Como usuario quiero responder una pregunta de un test del tipo selección única. (Prioridad: Alta | Puntos de Historia: 1)
     \item \textbf{HU10 - } Como usuario quiero responder una pregunta de un test del tipo respuesta por micrófono. (Prioridad: Alta | Puntos de Historia: 8)
-    \item \textbf{HU29 - } Como profesor quiero ver una lista de todas las preguntas. (Prioridad: Alta | Puntos de Historia: 0.5)
+    \item \textbf{HU29 - } Como profesor y administrador quiero ver una lista de todas las preguntas. (Prioridad: Alta | Puntos de Historia: 0.5)
     \item \textbf{HU11 - } Como usuario quiero ver el resultado de un test. (Prioridad: Media | Puntos de Historia: 2)
     \item \textbf{HU13 - } Como usuario quiero ver mi progreso en las lecciones. (Prioridad: Media | Puntos de Historia: 2)
-    \item \textbf{HU28 - } Como profesor quiero ver una lista de todas las lecciones. (Prioridad: Media | Puntos de Historia: 0.5)
-    \item \textbf{HU14 - } Como profesor quiero crear una lección. (Prioridad: Media | Puntos de Historia: 1)
-    \item \textbf{HU15 - } Como profesor quiero modificar el texto de una lección. (Prioridad: Media | Puntos de Historia: 2)
-    \item \textbf{HU16 - } Como profesor quiero añadir contenido multimedia a una lección. (Prioridad: Media | Puntos de Historia: 2)
-    \item \textbf{HU17 - } Como profesor quiero eliminar contenido multimedia de una lección. (Prioridad: Media | Puntos de Historia: 1)
-    \item \textbf{HU27 - } Como profesor quiero añadir preguntas a un test del tipo entrada de texto. (Prioridad: Media | Puntos de Historia: 1)
-    \item \textbf{HU18 - } Como profesor quiero añadir preguntas a un test del tipo selección múltiple. (Prioridad: Media | Puntos de Historia: 1)
-    \item \textbf{HU19 - } Como profesor quiero añadir preguntas a un test del tipo selección única. (Prioridad: Media | Puntos de Historia: 1)
-    \item \textbf{HU20 - } Como profesor quiero añadir preguntas a un test del tipo respuesta por micrófono. (Prioridad: Media | Puntos de Historia: 2)
-    \item \textbf{HU21 - } Como profesor quiero eliminar preguntas de un test. (Prioridad: Media | Puntos de Historia: 0.5)
-    \item \textbf{HU22 - } Como profesor quiero modificar preguntas de un test. (Prioridad: Media | Puntos de Historia: 1)
+    \item \textbf{HU28 - } Como profesor y administrador quiero ver una lista de todas las lecciones. (Prioridad: Media | Puntos de Historia: 0.5)
+    \item \textbf{HU14 - } Como profesor y administrador quiero crear una lección. (Prioridad: Media | Puntos de Historia: 1)
+    \item \textbf{HU15 - } Como profesor y administrador quiero modificar el texto de una lección. (Prioridad: Media | Puntos de Historia: 2)
+    \item \textbf{HU16 - } Como profesor y administrador quiero añadir contenido multimedia a una lección. (Prioridad: Media | Puntos de Historia: 2)
+    \item \textbf{HU17 - } Como profesor y administrador quiero eliminar contenido multimedia de una lección. (Prioridad: Media | Puntos de Historia: 1)
+    \item \textbf{HU27 - } Como profesor y administrador quiero añadir preguntas a un test del tipo entrada de texto. (Prioridad: Media | Puntos de Historia: 1)
+    \item \textbf{HU18 - } Como profesor y administrador quiero añadir preguntas a un test del tipo selección múltiple. (Prioridad: Media | Puntos de Historia: 1)
+    \item \textbf{HU19 - } Como profesor y administrador quiero añadir preguntas a un test del tipo selección única. (Prioridad: Media | Puntos de Historia: 1)
+    \item \textbf{HU20 - } Como profesor y administrador quiero añadir preguntas a un test del tipo respuesta por micrófono. (Prioridad: Media | Puntos de Historia: 2)
+    \item \textbf{HU21 - } Como profesor y administrador quiero eliminar preguntas de un test. (Prioridad: Media | Puntos de Historia: 0.5)
+    \item \textbf{HU22 - } Como profesor y administrador quiero modificar preguntas de un test. (Prioridad: Media | Puntos de Historia: 1)
     \item \textbf{HU30 - } Como administrador quiero ver una lista de todos los usuarios. (Prioridad: Media | Puntos de Historia: 0.5)
     \item \textbf{HU24 - } Como administrador quiero modificar los datos de un usuario. (Prioridad: Media | Puntos de Historia: 2)
     \item \textbf{HU25 - } Como administrador quiero eliminar un usuario. (Prioridad: Media | Puntos de Historia: 0.5)
-    \item \textbf{HU3 - } Como usuario quiero ver los datos personales y los logros de mi perfil. (Prioridad: Media | Puntos de Historia: 1)
+    \item \textbf{HU3 - } Como usuario quiero ver mis datos personales. (Prioridad: Media | Puntos de Historia: 1)
     \item \textbf{HU4 - } Como usuario quiero editar los datos de mi perfil. (Prioridad: Media | Puntos de Historia: 2)
     \item \textbf{HU23 - } Como administrador quiero crear un usuario. (Prioridad: Baja | Puntos de Historia: 1)
     \item \textbf{HU12 - } Como usuario quiero ver la lista de mis logros. (Prioridad: Baja | Puntos de Historia: 1)
     \item \textbf{HU5 - } Como usuario quiero ver con detalle uno de mis logros.  (Prioridad: Baja | Puntos de Historia: 1)
-
+    \item \textbf{HU31 - } Como profesor y administrador quiero eliminar una lección. (Prioridad: Media | Puntos de Historia: 0.5)
+    \item \textbf{HU32 - } Como administrador quiero ver una lista de todos los logros. (Prioridad: Media | Puntos de Historia: 0.5)
+    \item \textbf{HU33 - } Como administrador quiero modificar un logro. (Prioridad: Media | Puntos de Historia: 0.5)
+    \item \textbf{HU34 - } Como administrador quiero crear un logro. (Prioridad: Media | Puntos de Historia: 0.5)
+    \item \textbf{HU35 - } Como administrador quiero eliminar un logro. (Prioridad: Media | Puntos de Historia: 0.5)
 \end{itemize}
 
 \section{Sprints}
@@ -237,7 +241,7 @@ de los distintos tipos. Además, se realizará la funcionalidad de ver todos los
 \end{itemize}
 
 
-\subsection{Sprint \#10 - Funcionalidades del administrador y ranking}
+\subsection{Sprint \#10 - Funcionalidades del administrador}
 \textit{28/04/2023   -   12/05/2023}\\
 
 En la decima iteración se pretenden implementar todas las funcionalidades que tienen que ver con la administración de los usuarios, además de
@@ -248,7 +252,10 @@ dos historias relacionadas con el perfil propio del usuario.
     \item HU3 - Como usuario quiero ver los datos personales y los logros de mi perfil.
     \item HU4 - Como usuario quiero editar los datos de mi perfil.
     \item HU23 - Como administrador quiero crear un usuario.
-
+    \item HU32 - Como administrador quiero ver una lista de todos los logros. 
+    \item HU33 - Como administrador quiero modificar un logro.
+    \item HU34 - Como administrador quiero crear un logro.
+    \item HU35 - Como administrador quiero eliminar un logro.
 \end{itemize}
 
 \subsection{Sprint \#11 - Funcionalidades poco prioritarias y valor añadido}
