--- a/Memoria/capitulos/05_Analisis.tex
+++ b/Memoria/capitulos/05_Analisis.tex
@@ -7,20 +7,6 @@ más precisa y detallada del problema a resolver.
 \section{Historias de Usuario}
 A continuación, se procederá a describir las historias de usuario que se han definido para el proyecto. 
 
-% OTRA OPCIÓN:
-% \begin{table}[]
-%     \centering
-%     \resizebox{\textwidth}{!}{%
-%     \begin{tabular}{|lll|lll|}
-%     \hline
-%     \multicolumn{1}{|l|}{\textbf{ID:}}        & \multicolumn{1}{l|}{HU1}  & \textbf{Nombre:}       & \multicolumn{3}{l|}{\begin{tabular}[c]{@{}l@{}}EjemploEjemploEjemploEjemploEjemploEjemploEjemploEjemploEjemploEjemplo\\ EjemploEjemploEjemplo\end{tabular}}                                                                                                                                                        \\ \hline
-%     \multicolumn{1}{|l|}{PH}        & \multicolumn{1}{l|}{1}    & Descripcion  & \multicolumn{3}{l|}{\begin{tabular}[c]{@{}l@{}}EjemploEjemploEjemploEjemploEjemploEjemploEjemploEjemploEjemplo\\ EjemploEjemploEjemploEjemploEjemploEjemploEjemploEjemploEjemplo\\ EjemploEjemploEjemplo\end{tabular}}                                                                                                            \\ \hline
-%     \multicolumn{1}{|l|}{\textbf{Prioridad}} & \multicolumn{1}{l|}{Alta} & \textbf{Dependencias} & \multicolumn{1}{l|}{HU24}                                                                              & \multicolumn{1}{l|}{\textbf{Requisitos Funcionales}}                                                                             & RF1                                                                           \\ \hline
-%     \multicolumn{3}{|l|}{\textbf{Pruebas de aceptacion}}                                & \multicolumn{3}{l|}{\begin{tabular}[c]{@{}l@{}}ejemploejemploejemploejemploejemploejemploejemploejemploejemplo\\ ejemploejemplo\\ ejemploejemploejemploejemploejemploejemploejemploejemploejemplo\\ ejemploejemplo\\ejemploejemploejemploejemploejemploejemploejemploejemploejemplo\\ ejemploejemplo\\\end{tabular}} \\ \hline
-%     \end{tabular}%
-%     }
-%     \end{table}
-    
 \subsection*{Funcionalidad del usuario}
 
 \begin{table}[H]
@@ -62,8 +48,8 @@ A continuación, se procederá a describir las historias de usuario que se han d
                 >{\columncolor[HTML]{D8D8D8}}l |l|
                 >{\columncolor[HTML]{D8D8D8}}l |l|l|l|}
             \hline
-            \textbf{ID}                  & HU3                                      & \textbf{Nombre}       & \multicolumn{3}{l|}{\begin{tabular}[c]{@{}l@{}}Como usuario quiero ver los datos personales y los logros de mi perfil.\end{tabular}}\\ \hline
-            \textbf{PH}                  & 1                                     & \textbf{Descripcion}  & \multicolumn{3}{l|}{\begin{tabular}[c]{@{}l@{}}El usuario podrá visualizar todos los datos de su propio perfil, así \\como los logros obtenidos en su aprendizaje.\end{tabular}}  \\ \hline
+            \textbf{ID}                  & HU3                                      & \textbf{Nombre}       & \multicolumn{3}{l|}{\begin{tabular}[c]{@{}l@{}}Como usuario quiero ver los datos personales y los logros.\end{tabular}}\\ \hline
+            \textbf{PH}                  & 1                                     & \textbf{Descripcion}  & \multicolumn{3}{l|}{\begin{tabular}[c]{@{}l@{}}El usuario podrá visualizar todos los datos de su propio perfil como el nombre, \\ apellidos, imagen de perfil, correo, etc \end{tabular}}  \\ \hline
             \textbf{Prioridad}           & Media                                    & \textbf{Dependencias} & \begin{tabular}[c]{@{}l@{}} --- \end{tabular}                      & \cellcolor[HTML]{D8D8D8}\begin{tabular}[c]{@{}l@{}}\textbf{Requisitos Funcionales}\end{tabular} & \begin{tabular}[c]{@{}l@{}}RF 3\end{tabular} \\ \hline
             \multicolumn{3}{|l|}{\cellcolor[HTML]{D8D8D8}\textbf{Pruebas de aceptacion}} & \multicolumn{3}{l|}{\begin{tabular}[c]{@{}l@{}}1. Los datos mostrados al usuario en su perfil se corresponderán \\ con la información almacenada en la base de datos de dicho usuario. \end{tabular}}                                               \\ \hline
         \end{tabular}%
@@ -94,10 +80,10 @@ A continuación, se procederá a describir las historias de usuario que se han d
                 >{\columncolor[HTML]{D8D8D8}}l |l|
                 >{\columncolor[HTML]{D8D8D8}}l |l|l|l|}
             \hline
-            \textbf{ID}                  & HU5                                      & \textbf{Nombre}       & \multicolumn{3}{l|}{\begin{tabular}[c]{@{}l@{}}Como usuario quiero ver el perfil de otros usuarios.\end{tabular}}\\ \hline
-            \textbf{PH}                  & 1                                        & \textbf{Descripcion}  & \multicolumn{3}{l|}{\begin{tabular}[c]{@{}l@{}}El usuario podrá visitar los perfiles de otros usuarios registrados y ver sus logros \end{tabular}}  \\ \hline
-            \textbf{Prioridad}           & Baja                                        & \textbf{Dependencias} & \begin{tabular}[c]{@{}l@{}} HU 3 \end{tabular}                      & \cellcolor[HTML]{D8D8D8}\begin{tabular}[c]{@{}l@{}}\textbf{Requisitos Funcionales}\end{tabular} & \begin{tabular}[c]{@{}l@{}}RF 9\end{tabular} \\ \hline
-            \multicolumn{3}{|l|}{\cellcolor[HTML]{D8D8D8}\textbf{Pruebas de aceptacion}} & \multicolumn{3}{l|}{\begin{tabular}[c]{@{}l@{}}1. Los datos mostrados al usuario en su perfil se corresponderán \\ con la información almacenada en la base de datos de dicho usuario. \\ 2. Los datos privados del usuario no se mostrarán, solo los que no sean personales. \\ 3. El usuario que no haya iniciado sesión no podrá ver ningún perfil.\end{tabular}}                                               \\ \hline
+            \textbf{ID}                  & HU5                                      & \textbf{Nombre}       & \multicolumn{3}{l|}{\begin{tabular}[c]{@{}l@{}}Como usuario quiero ver en detalle uno de mis logros.\end{tabular}}\\ \hline
+            \textbf{PH}                  & 1                                        & \textbf{Descripcion}  & \multicolumn{3}{l|}{\begin{tabular}[c]{@{}l@{}}El usuario podrá ver la información en detalle de cada uno de sus logros \end{tabular}}  \\ \hline
+            \textbf{Prioridad}           & Baja                                        & \textbf{Dependencias} & \begin{tabular}[c]{@{}l@{}} HU 3 \end{tabular}                      & \cellcolor[HTML]{D8D8D8}\begin{tabular}[c]{@{}l@{}}\textbf{Requisitos Funcionales}\end{tabular} & \begin{tabular}[c]{@{}l@{}}RF 7\end{tabular} \\ \hline
+            \multicolumn{3}{|l|}{\cellcolor[HTML]{D8D8D8}\textbf{Pruebas de aceptacion}} & \multicolumn{3}{l|}{\begin{tabular}[c]{@{}l@{}}1. Los datos mostrados al usuario respecto al logro corresponderán \\ con la información almacenada en la base de datos. \end{tabular}}                                               \\ \hline
         \end{tabular}%
     }
 \end{table}
@@ -225,10 +211,10 @@ A continuación, se procederá a describir las historias de usuario que se han d
                 >{\columncolor[HTML]{D8D8D8}}l |l|
                 >{\columncolor[HTML]{D8D8D8}}l |l|l|l|}
             \hline
-            \textbf{ID}                  & HU12                                      & \textbf{Nombre}       & \multicolumn{3}{l|}{\begin{tabular}[c]{@{}l@{}}Como usuario quiero ver el ranking de usuarios.\end{tabular}}\\ \hline
-            \textbf{PH}                  & 1                                        & \textbf{Descripcion}  & \multicolumn{3}{l|}{\begin{tabular}[c]{@{}l@{}}El usuario podrá visualizar la lista ordenada de usuarios con mayor progreso.\end{tabular}}  \\ \hline
-            \textbf{Prioridad}           & Baja                                        & \textbf{Dependencias} & \begin{tabular}[c]{@{}l@{}} --- \end{tabular}                      & \cellcolor[HTML]{D8D8D8}\begin{tabular}[c]{@{}l@{}}\textbf{Requisitos Funcionales}\end{tabular} & \begin{tabular}[c]{@{}l@{}}RF 22\end{tabular} \\ \hline
-            \multicolumn{3}{|l|}{\cellcolor[HTML]{D8D8D8}\textbf{Pruebas de aceptacion}} & \multicolumn{3}{l|}{\begin{tabular}[c]{@{}l@{}}1. La lista mostrará a los usuarios con más puntuación en el sistema. \end{tabular}}                                               \\ \hline
+            \textbf{ID}                  & HU12                                      & \textbf{Nombre}       & \multicolumn{3}{l|}{\begin{tabular}[c]{@{}l@{}}Como usuario quiero ver la lista de mis logros obtenidos.\end{tabular}}\\ \hline
+            \textbf{PH}                  & 0.5                                        & \textbf{Descripcion}  & \multicolumn{3}{l|}{\begin{tabular}[c]{@{}l@{}}El usuario podrá visualizar la lista de logros conseguidos durante su progreso. \end{tabular}}  \\ \hline
+            \textbf{Prioridad}           & Media                                        & \textbf{Dependencias} & \begin{tabular}[c]{@{}l@{}} --- \end{tabular}                      & \cellcolor[HTML]{D8D8D8}\begin{tabular}[c]{@{}l@{}}\textbf{Requisitos Funcionales}\end{tabular} & \begin{tabular}[c]{@{}l@{}}RF 22\end{tabular} \\ \hline
+            \multicolumn{3}{|l|}{\cellcolor[HTML]{D8D8D8}\textbf{Pruebas de aceptacion}} & \multicolumn{3}{l|}{\begin{tabular}[c]{@{}l@{}}1. La lista mostrará solamente los logros que el usuario tenga asociados por haberlos obtenido. \end{tabular}}                                               \\ \hline
         \end{tabular}%
     }
 \end{table}
@@ -258,7 +244,7 @@ A continuación, se procederá a describir las historias de usuario que se han d
                 >{\columncolor[HTML]{D8D8D8}}l |l|
                 >{\columncolor[HTML]{D8D8D8}}l |l|l|l|}
             \hline
-            \textbf{ID}                  & HU14                                      & \textbf{Nombre}       & \multicolumn{3}{l|}{\begin{tabular}[c]{@{}l@{}}Como profesor quiero crear una lección.\end{tabular}}\\ \hline
+            \textbf{ID}                  & HU14                                      & \textbf{Nombre}       & \multicolumn{3}{l|}{\begin{tabular}[c]{@{}l@{}}Como profesor y administrador quiero crear una lección.\end{tabular}}\\ \hline
             \textbf{PH}                  & 1                                        & \textbf{Descripcion}  & \multicolumn{3}{l|}{\begin{tabular}[c]{@{}l@{}}El profesor podrá crear una lección, añadiendo el texto y el contenido multimedia \\ que desee. \end{tabular}}  \\ \hline
             \textbf{Prioridad}           & Media                                        & \textbf{Dependencias} & \begin{tabular}[c]{@{}l@{}} HU28 \end{tabular}                      & \cellcolor[HTML]{D8D8D8}\begin{tabular}[c]{@{}l@{}}\textbf{Requisitos Funcionales}\end{tabular} & \begin{tabular}[c]{@{}l@{}}RF 11\end{tabular} \\ \hline
             \multicolumn{3}{|l|}{\cellcolor[HTML]{D8D8D8}\textbf{Pruebas de aceptacion}} & \multicolumn{3}{l|}{\begin{tabular}[c]{@{}l@{}}1. Todos los campos rellenados por el profesor serán almacenados en la base de datos.\\ 2. Si el usuario introduce valores erróneos, se informará del campo en el que está\\ el error. \\3. Si el usuario no introduce datos en los campos obligatorios, se informará de los \\campos que falten por rellenar. \end{tabular}}                                               \\ \hline
@@ -274,7 +260,7 @@ A continuación, se procederá a describir las historias de usuario que se han d
                 >{\columncolor[HTML]{D8D8D8}}l |l|
                 >{\columncolor[HTML]{D8D8D8}}l |l|l|l|}
             \hline
-            \textbf{ID}                  & HU15                                      & \textbf{Nombre}       & \multicolumn{3}{l|}{\begin{tabular}[c]{@{}l@{}}Como profesor quiero modificar el texto de una lección.\end{tabular}}\\ \hline
+            \textbf{ID}                  & HU15                                      & \textbf{Nombre}       & \multicolumn{3}{l|}{\begin{tabular}[c]{@{}l@{}}Como profesor y administrador quiero modificar el texto de una lección.\end{tabular}}\\ \hline
             \textbf{PH}                  & 2                                        & \textbf{Descripcion}  & \multicolumn{3}{l|}{\begin{tabular}[c]{@{}l@{}}El profesor podrá modificar el texto de una lección en particular. \end{tabular}}  \\ \hline
             \textbf{Prioridad}           & Media                                        & \textbf{Dependencias} & \begin{tabular}[c]{@{}l@{}} HU14, HU28 \end{tabular}                      & \cellcolor[HTML]{D8D8D8}\begin{tabular}[c]{@{}l@{}}\textbf{Requisitos Funcionales}\end{tabular} & \begin{tabular}[c]{@{}l@{}}RF 13\end{tabular} \\ \hline
             \multicolumn{3}{|l|}{\cellcolor[HTML]{D8D8D8}\textbf{Pruebas de aceptacion}} & \multicolumn{3}{l|}{\begin{tabular}[c]{@{}l@{}}1. Todos los campos rellenados por el profesor serán actualizados en la base de datos. \\ 2. Si el usuario introduce valores erróneos, se informará del campo en el que \\está el error. \\3. Si el usuario no introduce datos en los campos obligatorios, se informará de los\\ campos que falten por rellenar.\end{tabular}}                                               \\ \hline
@@ -291,7 +277,7 @@ A continuación, se procederá a describir las historias de usuario que se han d
                 >{\columncolor[HTML]{D8D8D8}}l |l|
                 >{\columncolor[HTML]{D8D8D8}}l |l|l|l|}
             \hline
-            \textbf{ID}                  & HU16                                      & \textbf{Nombre}       & \multicolumn{3}{l|}{\begin{tabular}[c]{@{}l@{}}Como profesor quiero añadir contenido multimedia a una lección.\end{tabular}}\\ \hline
+            \textbf{ID}                  & HU16                                      & \textbf{Nombre}       & \multicolumn{3}{l|}{\begin{tabular}[c]{@{}l@{}}Como profesor y administrador quiero añadir contenido multimedia a una lección.\end{tabular}}\\ \hline
             \textbf{PH}                  & 2                                        & \textbf{Descripcion}  & \multicolumn{3}{l|}{\begin{tabular}[c]{@{}l@{}}El usuario podrá añadir contenido multimedia al cuerpo de una lección.\end{tabular}}  \\ \hline
             \textbf{Prioridad}           & Media                                        & \textbf{Dependencias} & \begin{tabular}[c]{@{}l@{}} HU28, HU14 \end{tabular}                      & \cellcolor[HTML]{D8D8D8}\begin{tabular}[c]{@{}l@{}}\textbf{Requisitos Funcionales}\end{tabular} & \begin{tabular}[c]{@{}l@{}}RF 13\end{tabular} \\ \hline
             \multicolumn{3}{|l|}{\cellcolor[HTML]{D8D8D8}\textbf{Pruebas de aceptacion}} & \multicolumn{3}{l|}{\begin{tabular}[c]{@{}l@{}}1. Se agregará el contenido multimedia a la tabla de la lección en la base de datos. \\ 2. Si el usuario introduce valores erróneos, se informará del campo en el que \\está el error. \\3. Si el usuario no introduce datos en los campos obligatorios, se informará de los \\campos que falten por rellenar.\end{tabular}}                                               \\ \hline
@@ -307,7 +293,7 @@ A continuación, se procederá a describir las historias de usuario que se han d
                 >{\columncolor[HTML]{D8D8D8}}l |l|
                 >{\columncolor[HTML]{D8D8D8}}l |l|l|l|}
             \hline
-            \textbf{ID}                  & HU17                                      & \textbf{Nombre}       & \multicolumn{3}{l|}{\begin{tabular}[c]{@{}l@{}}Como profesor quiero eliminar contenido multimedia de una lección.\end{tabular}}\\ \hline
+            \textbf{ID}                  & HU17                                      & \textbf{Nombre}       & \multicolumn{3}{l|}{\begin{tabular}[c]{@{}l@{}}Como profesor y administrador quiero eliminar contenido multimedia de una lección.\end{tabular}}\\ \hline
             \textbf{PH}                  & 1                                        & \textbf{Descripcion}  & \multicolumn{3}{l|}{\begin{tabular}[c]{@{}l@{}}El usuario podrá eliminar contenido multimedia del cuerpo de una lección.\end{tabular}}  \\ \hline
             \textbf{Prioridad}           & Media                                       & \textbf{Dependencias} & \begin{tabular}[c]{@{}l@{}} HU28, HU14 \end{tabular}                      & \cellcolor[HTML]{D8D8D8}\begin{tabular}[c]{@{}l@{}}\textbf{Requisitos Funcionales}\end{tabular} & \begin{tabular}[c]{@{}l@{}}RF 13\end{tabular} \\ \hline
             \multicolumn{3}{|l|}{\cellcolor[HTML]{D8D8D8}\textbf{Pruebas de aceptacion}} & \multicolumn{3}{l|}{\begin{tabular}[c]{@{}l@{}}1. Se eliminará el contenido multimedia de la tabla de la lección en la base de datos.\end{tabular}}                                               \\ \hline
@@ -322,7 +308,7 @@ A continuación, se procederá a describir las historias de usuario que se han d
             >{\columncolor[HTML]{D8D8D8}}l |l|
             >{\columncolor[HTML]{D8D8D8}}l |l|l|l|}
         \hline
-            \textbf{ID}                  & HU18                                      & \textbf{Nombre}       & \multicolumn{3}{l|}{\begin{tabular}[c]{@{}l@{}}Como profesor quiero añadir preguntas a un test del tipo selección múltiple.\end{tabular}}\\ \hline
+            \textbf{ID}                  & HU18                                      & \textbf{Nombre}       & \multicolumn{3}{l|}{\begin{tabular}[c]{@{}l@{}}Como profesor y administrador quiero añadir preguntas a un test del tipo selección múltiple.\end{tabular}}\\ \hline
             \textbf{PH}                  & 1                                        & \textbf{Descripcion}  & \multicolumn{3}{l|}{\begin{tabular}[c]{@{}l@{}}El profesor creará preguntas de tipo selección multiple y las añadirá a un test.\end{tabular}}  \\ \hline
             \textbf{Prioridad}           & Media                                        & \textbf{Dependencias} & \begin{tabular}[c]{@{}l@{}} --- \end{tabular}                      & \cellcolor[HTML]{D8D8D8}\begin{tabular}[c]{@{}l@{}}\textbf{Requisitos Funcionales}\end{tabular} & \begin{tabular}[c]{@{}l@{}}RF 14\end{tabular} \\ \hline
             \multicolumn{3}{|l|}{\cellcolor[HTML]{D8D8D8}\textbf{Pruebas de aceptacion}} & \multicolumn{3}{l|}{\begin{tabular}[c]{@{}l@{}}1. Todos los campos rellenados por el profesor serán almacenados en la base de datos. \\ 2. La pregunta se mostrará en su test correspondiente. \end{tabular}}                                               \\ \hline
@@ -339,7 +325,7 @@ A continuación, se procederá a describir las historias de usuario que se han d
                     >{\columncolor[HTML]{D8D8D8}}l |l|
                     >{\columncolor[HTML]{D8D8D8}}l |l|l|l|}
                 \hline
-                \textbf{ID}                  & HU19                                     & \textbf{Nombre}       & \multicolumn{3}{l|}{\begin{tabular}[c]{@{}l@{}}Como profesor quiero añadir preguntas a un test del tipo selección única.\end{tabular}}\\ \hline
+                \textbf{ID}                  & HU19                                     & \textbf{Nombre}       & \multicolumn{3}{l|}{\begin{tabular}[c]{@{}l@{}}Como profesor y administrador quiero añadir preguntas a un test del tipo selección única.\end{tabular}}\\ \hline
                 \textbf{PH}                  & 1                                        & \textbf{Descripcion}  & \multicolumn{3}{l|}{\begin{tabular}[c]{@{}l@{}}El profesor creará preguntas de tipo selección única y las añadirá a un test.\end{tabular}}  \\ \hline
                 \textbf{Prioridad}           & Media                                        & \textbf{Dependencias} & \begin{tabular}[c]{@{}l@{}} --- \end{tabular}                      & \cellcolor[HTML]{D8D8D8}\begin{tabular}[c]{@{}l@{}}\textbf{Requisitos Funcionales}\end{tabular} & \begin{tabular}[c]{@{}l@{}}RF 14\end{tabular} \\ \hline
                 \multicolumn{3}{|l|}{\cellcolor[HTML]{D8D8D8}\textbf{Pruebas de aceptacion}} & \multicolumn{3}{l|}{\begin{tabular}[c]{@{}l@{}}1. Todos los campos rellenados por el profesor serán almacenados en la base de datos. \\ 2. La pregunta se mostrará en su test correspondiente. \end{tabular}}                                               \\ \hline
@@ -354,7 +340,7 @@ A continuación, se procederá a describir las historias de usuario que se han d
                 >{\columncolor[HTML]{D8D8D8}}l |l|
                 >{\columncolor[HTML]{D8D8D8}}l |l|l|l|}
             \hline
-            \textbf{ID}                  & HU20                                     & \textbf{Nombre}       & \multicolumn{3}{l|}{\begin{tabular}[c]{@{}l@{}}Como profesor quiero añadir preguntas a un test del tipo respuesta por micrófono.\end{tabular}}\\ \hline
+            \textbf{ID}                  & HU20                                     & \textbf{Nombre}       & \multicolumn{3}{l|}{\begin{tabular}[c]{@{}l@{}}Como profesor y administrador quiero añadir preguntas a un test del tipo respuesta por micrófono.\end{tabular}}\\ \hline
             \textbf{PH}                  & 2                                        & \textbf{Descripcion}  & \multicolumn{3}{l|}{\begin{tabular}[c]{@{}l@{}}El profesor creará preguntas de tipo respuesta por micrófono y las añadirá a un test.\end{tabular}}  \\ \hline
             \textbf{Prioridad}           & Media                                        & \textbf{Dependencias} & \begin{tabular}[c]{@{}l@{}} --- \end{tabular}                      & \cellcolor[HTML]{D8D8D8}\begin{tabular}[c]{@{}l@{}}\textbf{Requisitos Funcionales}\end{tabular} & \begin{tabular}[c]{@{}l@{}}RF 14\end{tabular} \\ \hline
             \multicolumn{3}{|l|}{\cellcolor[HTML]{D8D8D8}\textbf{Pruebas de aceptacion}} & \multicolumn{3}{l|}{\begin{tabular}[c]{@{}l@{}}1. Todos los campos rellenados por el profesor serán almacenados en la base de datos. \\ 2. La pregunta se mostrará en su test correspondiente.  \end{tabular}}                                               \\ \hline
@@ -370,7 +356,7 @@ A continuación, se procederá a describir las historias de usuario que se han d
                 >{\columncolor[HTML]{D8D8D8}}l |l|
                 >{\columncolor[HTML]{D8D8D8}}l |l|l|l|}
             \hline
-            \textbf{ID}                  & HU21                                      & \textbf{Nombre}       & \multicolumn{3}{l|}{\begin{tabular}[c]{@{}l@{}}Como profesor quiero eliminar preguntas de un test.\end{tabular}}\\ \hline
+            \textbf{ID}                  & HU21                                      & \textbf{Nombre}       & \multicolumn{3}{l|}{\begin{tabular}[c]{@{}l@{}}Como profesor y administrador quiero eliminar preguntas de un test.\end{tabular}}\\ \hline
             \textbf{PH}                  & 0.5                                        & \textbf{Descripcion}  & \multicolumn{3}{l|}{\begin{tabular}[c]{@{}l@{}}El usuario podrá eliminar preguntas existentes de un test. \end{tabular}}  \\ \hline
             \textbf{Prioridad}           & Media                                        & \textbf{Dependencias} & \begin{tabular}[c]{@{}l@{}} HU29 \end{tabular}                      & \cellcolor[HTML]{D8D8D8}\begin{tabular}[c]{@{}l@{}}\textbf{Requisitos Funcionales}\end{tabular} & \begin{tabular}[c]{@{}l@{}}RF 17\end{tabular} \\ \hline
             \multicolumn{3}{|l|}{\cellcolor[HTML]{D8D8D8}\textbf{Pruebas de aceptacion}} & \multicolumn{3}{l|}{\begin{tabular}[c]{@{}l@{}}1. Se eliminará la información de dicha pregunta de la base de datos \\ \end{tabular}}                                               \\ \hline
@@ -386,7 +372,7 @@ A continuación, se procederá a describir las historias de usuario que se han d
                 >{\columncolor[HTML]{D8D8D8}}l |l|
                 >{\columncolor[HTML]{D8D8D8}}l |l|l|l|}
             \hline
-            \textbf{ID}                  & HU22                                      & \textbf{Nombre}       & \multicolumn{3}{l|}{\begin{tabular}[c]{@{}l@{}}Como profesor quiero modificar preguntas de un test.\end{tabular}}\\ \hline
+            \textbf{ID}                  & HU22                                      & \textbf{Nombre}       & \multicolumn{3}{l|}{\begin{tabular}[c]{@{}l@{}}Como profesor y administrador quiero modificar preguntas de un test.\end{tabular}}\\ \hline
             \textbf{PH}                  & 1                                        & \textbf{Descripcion}  & \multicolumn{3}{l|}{\begin{tabular}[c]{@{}l@{}}El profesor' podrá modificar tanto el enunciado (la cuestión) como las\\ posibles respuestas de cada pregunta de un test a través de un formulario.\end{tabular}}  \\ \hline
             \textbf{Prioridad}           & Media                                        & \textbf{Dependencias} & \begin{tabular}[c]{@{}l@{}} HU29 \end{tabular}                      & \cellcolor[HTML]{D8D8D8}\begin{tabular}[c]{@{}l@{}}\textbf{Requisitos Funcionales}\end{tabular} & \begin{tabular}[c]{@{}l@{}}RF 16\end{tabular} \\ \hline
             \multicolumn{3}{|l|}{\cellcolor[HTML]{D8D8D8}\textbf{Pruebas de aceptacion}} & \multicolumn{3}{l|}{\begin{tabular}[c]{@{}l@{}}1. Todos los campos rellenados por el profesor serán actualizados en la \\base de datos \\ 2. La contraseña se almacenará cifrada para no comprometer la seguridad\\del usuario. \\3. Si el usuario introduce valores erróneos, se informará del campo en el \\que está el error. \\4. Si el usuario no introduce datos en los campos obligatorios, se informará \\de los campos que falten por rellenar.\end{tabular}}                                               \\ \hline
@@ -403,7 +389,7 @@ A continuación, se procederá a describir las historias de usuario que se han d
                 >{\columncolor[HTML]{D8D8D8}}l |l|
                 >{\columncolor[HTML]{D8D8D8}}l |l|l|l|}
             \hline
-            \textbf{ID}                  & HU27                                      & \textbf{Nombre}       & \multicolumn{3}{l|}{\begin{tabular}[c]{@{}l@{}}Como profesor quiero añadir preguntas a un test del tipo \\escritura de texto. \end{tabular}}\\ \hline
+            \textbf{ID}                  & HU27                                      & \textbf{Nombre}       & \multicolumn{3}{l|}{\begin{tabular}[c]{@{}l@{}}Como profesor y administrador quiero añadir preguntas a un test del tipo \\escritura de texto. \end{tabular}}\\ \hline
             \textbf{PH}                  & 1                                        & \textbf{Descripcion}  & \multicolumn{3}{l|}{\begin{tabular}[c]{@{}l@{}}El profesor creará preguntas de tipo escritura de texto y las\\ añadirá a un test. \end{tabular}}  \\ \hline
             \textbf{Prioridad}           & Media                                        & \textbf{Dependencias} & \begin{tabular}[c]{@{}l@{}} --- \end{tabular}                      & \cellcolor[HTML]{D8D8D8}\begin{tabular}[c]{@{}l@{}}\textbf{Requisitos Funcionales}\end{tabular} & \begin{tabular}[c]{@{}l@{}}RF 14\end{tabular} \\ \hline
             \multicolumn{3}{|l|}{\cellcolor[HTML]{D8D8D8}\textbf{Pruebas de aceptacion}} & \multicolumn{3}{l|}{\begin{tabular}[c]{@{}l@{}}1. Todos los campos rellenados por el profesor serán almacenados \\en la base de datos. \\ 2. La pregunta se mostrará en su test correspondiente. \end{tabular}}                                               \\ \hline
@@ -419,7 +405,7 @@ A continuación, se procederá a describir las historias de usuario que se han d
                 >{\columncolor[HTML]{D8D8D8}}l |l|
                 >{\columncolor[HTML]{D8D8D8}}l |l|l|l|}
             \hline
-            \textbf{ID}                  & HU28                                      & \textbf{Nombre}       & \multicolumn{3}{l|}{\begin{tabular}[c]{@{}l@{}}Como profesor quiero ver una lista de todas las lecciones.\end{tabular}}\\ \hline
+            \textbf{ID}                  & HU28                                      & \textbf{Nombre}       & \multicolumn{3}{l|}{\begin{tabular}[c]{@{}l@{}}Como profesor y administrador quiero ver una lista de todas las lecciones.\end{tabular}}\\ \hline
             \textbf{PH}                  & 0.5                                        & \textbf{Descripcion}  & \multicolumn{3}{l|}{\begin{tabular}[c]{@{}l@{}}El profesor podrá ver una lista de todas las lecciones almacenadas\\ en el sistema. \end{tabular}}  \\ \hline
             \textbf{Prioridad}           & Media                                        & \textbf{Dependencias} & \begin{tabular}[c]{@{}l@{}} --- \end{tabular}                      & \cellcolor[HTML]{D8D8D8}\begin{tabular}[c]{@{}l@{}}\textbf{Requisitos Funcionales}\end{tabular} & \begin{tabular}[c]{@{}l@{}}RF 10\end{tabular} \\ \hline
             \multicolumn{3}{|l|}{\cellcolor[HTML]{D8D8D8}\textbf{Pruebas de aceptacion}} & \multicolumn{3}{l|}{\begin{tabular}[c]{@{}l@{}}1. Todas las lecciones almacenados en la base de datos del sistema\\ se mostrarán  en pantalla\end{tabular}}                                               \\ \hline
@@ -434,7 +420,7 @@ A continuación, se procederá a describir las historias de usuario que se han d
                 >{\columncolor[HTML]{D8D8D8}}l |l|
                 >{\columncolor[HTML]{D8D8D8}}l |l|l|l|}
             \hline
-            \textbf{ID}                  & HU29                                      & \textbf{Nombre}       & \multicolumn{3}{l|}{\begin{tabular}[c]{@{}l@{}}Como profesor quiero ver una lista de todas las preguntas.\end{tabular}}\\ \hline
+            \textbf{ID}                  & HU29                                      & \textbf{Nombre}       & \multicolumn{3}{l|}{\begin{tabular}[c]{@{}l@{}}Como profesor y administrador quiero ver una lista de todas las preguntas.\end{tabular}}\\ \hline
             \textbf{PH}                  & 0.5                                        & \textbf{Descripcion}  & \multicolumn{3}{l|}{\begin{tabular}[c]{@{}l@{}}El profesor podrá ver una lista de todas las preguntas almacenadas \\en el sistema. \end{tabular}}  \\ \hline
             \textbf{Prioridad}           & Media                                        & \textbf{Dependencias} & \begin{tabular}[c]{@{}l@{}} --- \end{tabular}                      & \cellcolor[HTML]{D8D8D8}\begin{tabular}[c]{@{}l@{}}\textbf{Requisitos Funcionales}\end{tabular} & \begin{tabular}[c]{@{}l@{}}RF 15\end{tabular} \\ \hline
             \multicolumn{3}{|l|}{\cellcolor[HTML]{D8D8D8}\textbf{Pruebas de aceptacion}} & \multicolumn{3}{l|}{\begin{tabular}[c]{@{}l@{}}1. Todas las preguntas almacenadas en la base de datos del sistema \\se mostrarán en pantalla\end{tabular}}                                               \\ \hline
@@ -503,12 +489,78 @@ A continuación, se procederá a describir las historias de usuario que se han d
                 >{\columncolor[HTML]{D8D8D8}}l |l|l|l|}
             \hline
             \textbf{ID}                  & HU30                                      & \textbf{Nombre}       & \multicolumn{3}{l|}{\begin{tabular}[c]{@{}l@{}}Como administrador quiero ver una lista de todos los usuarios.\end{tabular}}\\ \hline
-            \textbf{PH}                  & 0.5                                        & \textbf{Descripcion}  & \multicolumn{3}{l|}{\begin{tabular}[c]{@{}l@{}}El profesor podrá ver una lista de todos los alumnos registrados\\ en el sistema. \end{tabular}}  \\ \hline
+            \textbf{PH}                  & 0.5                                        & \textbf{Descripcion}  & \multicolumn{3}{l|}{\begin{tabular}[c]{@{}l@{}}El administrador podrá ver una lista de todos los alumnos registrados\\ en el sistema. \end{tabular}}  \\ \hline
             \textbf{Prioridad}           & Media                                        & \textbf{Dependencias} & \begin{tabular}[c]{@{}l@{}} --- \end{tabular}                      & \cellcolor[HTML]{D8D8D8}\begin{tabular}[c]{@{}l@{}}\textbf{Requisitos Funcionales}\end{tabular} & \begin{tabular}[c]{@{}l@{}}RF 20\end{tabular} \\ \hline
             \multicolumn{3}{|l|}{\cellcolor[HTML]{D8D8D8}\textbf{Pruebas de aceptacion}} & \multicolumn{3}{l|}{\begin{tabular}[c]{@{}l@{}}1. Todos los usuarios almacenados en la base de datos del sistema\\ se mostrarán en pantalla\end{tabular}}                                                                                   \\ \hline
         \end{tabular}%
     }
 \end{table}
+
+
+\subsection*{Gestión de logros}
+\begin{table}[H]
+    \centering
+    \resizebox{\textwidth}{!}{%
+        \begin{tabular}{|
+                >{\columncolor[HTML]{D8D8D8}}l |l|
+                >{\columncolor[HTML]{D8D8D8}}l |l|l|l|}
+            \hline
+            \textbf{ID}                  & HU31                                      & \textbf{Nombre}       & \multicolumn{3}{l|}{\begin{tabular}[c]{@{}l@{}}Como administrador quiero ver una lista de todos los logros.\end{tabular}}\\ \hline
+            \textbf{PH}                  & 0.5                                        & \textbf{Descripcion}  & \multicolumn{3}{l|}{\begin{tabular}[c]{@{}l@{}}El administrador podrá ver una lista de todos los logros creados en el sistema. \end{tabular}}  \\ \hline
+            \textbf{Prioridad}           & Media                                        & \textbf{Dependencias} & \begin{tabular}[c]{@{}l@{}} --- \end{tabular}                      & \cellcolor[HTML]{D8D8D8}\begin{tabular}[c]{@{}l@{}}\textbf{Requisitos Funcionales}\end{tabular} & \begin{tabular}[c]{@{}l@{}}RF 25\end{tabular} \\ \hline
+            \multicolumn{3}{|l|}{\cellcolor[HTML]{D8D8D8}\textbf{Pruebas de aceptacion}} & \multicolumn{3}{l|}{\begin{tabular}[c]{@{}l@{}}1. Todos los logros almacenados en la base de datos del sistema\\ se mostrarán en pantalla\end{tabular}}                                                                                   \\ \hline
+        \end{tabular}%
+    }
+\end{table}
+
+\begin{table}[H]
+    \centering
+    \resizebox{\textwidth}{!}{%
+        \begin{tabular}{|
+                >{\columncolor[HTML]{D8D8D8}}l |l|
+                >{\columncolor[HTML]{D8D8D8}}l |l|l|l|}
+            \hline
+            \textbf{ID}                  & HU32                                      & \textbf{Nombre}       & \multicolumn{3}{l|}{\begin{tabular}[c]{@{}l@{}}Como administrador quiero crear un logro.\end{tabular}}\\ \hline
+            \textbf{PH}                  & 1                                        & \textbf{Descripcion}  & \multicolumn{3}{l|}{\begin{tabular}[c]{@{}l@{}}El administrador podrá crear logros rellenando un formulario con campos\\ como el nombre, la imagen, la descripción, el tipo.. \end{tabular}}  \\ \hline
+            \textbf{Prioridad}           & Baja                                        & \textbf{Dependencias} & \begin{tabular}[c]{@{}l@{}} --- \end{tabular}                      & \cellcolor[HTML]{D8D8D8}\begin{tabular}[c]{@{}l@{}}\textbf{Requisitos Funcionales}\end{tabular} & \begin{tabular}[c]{@{}l@{}}RF 24\end{tabular} \\ \hline
+            \multicolumn{3}{|l|}{\cellcolor[HTML]{D8D8D8}\textbf{Pruebas de aceptacion}} & \multicolumn{3}{l|}{\begin{tabular}[c]{@{}l@{}}1. Todos los campos rellenados por el administrador serán almacenados\\ en la base de datos \end{tabular}}                                               \\ \hline
+        \end{tabular}%
+    }
+\end{table}
+
+
+\begin{table}[H]
+    \centering
+    \resizebox{\textwidth}{!}{%
+        \begin{tabular}{|
+                >{\columncolor[HTML]{D8D8D8}}l |l|
+                >{\columncolor[HTML]{D8D8D8}}l |l|l|l|}
+            \hline
+            \textbf{ID}                  & HU33                                      & \textbf{Nombre}       & \multicolumn{3}{l|}{\begin{tabular}[c]{@{}l@{}}Como administrador quiero modificar los datos de un logro.\end{tabular}}\\ \hline
+            \textbf{PH}                  & 2                                        & \textbf{Descripcion}  & \multicolumn{3}{l|}{\begin{tabular}[c]{@{}l@{}}El administrador podrá modificar los datos de un logro registrado en el\\ sistema rellenando un formulario con campos como el nombre,\\ la descripción, la imagen, el tipo... \end{tabular}}  \\ \hline
+            \textbf{Prioridad}           & Media                                        & \textbf{Dependencias} & \begin{tabular}[c]{@{}l@{}} HU30 \end{tabular}                      & \cellcolor[HTML]{D8D8D8}\begin{tabular}[c]{@{}l@{}}\textbf{Requisitos Funcionales}\end{tabular} & \begin{tabular}[c]{@{}l@{}}RF 23\end{tabular} \\ \hline
+            \multicolumn{3}{|l|}{\cellcolor[HTML]{D8D8D8}\textbf{Pruebas de aceptacion}} & \multicolumn{3}{l|}{\begin{tabular}[c]{@{}l@{}}1. Todos los campos rellenados por el usuario serán actualizados en la\\base de datos \end{tabular}}                                               \\ \hline
+        \end{tabular}%
+    }
+\end{table}
+
+
+\begin{table}[H]
+    \centering
+    \resizebox{\textwidth}{!}{%
+        \begin{tabular}{|
+                >{\columncolor[HTML]{D8D8D8}}l |l|
+                >{\columncolor[HTML]{D8D8D8}}l |l|l|l|}
+            \hline
+            \textbf{ID}                  & HU34                                      & \textbf{Nombre}       & \multicolumn{3}{l|}{\begin{tabular}[c]{@{}l@{}}Como administrador quiero eliminar un logro.\end{tabular}}\\ \hline
+            \textbf{PH}                  & 0.5                                        & \textbf{Descripcion}  & \multicolumn{3}{l|}{\begin{tabular}[c]{@{}l@{}}El administrador podrá eliminar un logro almacenado en el sistema. \end{tabular}}  \\ \hline
+            \textbf{Prioridad}           & Media                                        & \textbf{Dependencias} & \begin{tabular}[c]{@{}l@{}} HU30 \end{tabular}                      & \cellcolor[HTML]{D8D8D8}\begin{tabular}[c]{@{}l@{}}\textbf{Requisitos Funcionales}\end{tabular} & \begin{tabular}[c]{@{}l@{}}RF 26\end{tabular} \\ \hline
+            \multicolumn{3}{|l|}{\cellcolor[HTML]{D8D8D8}\textbf{Pruebas de aceptacion}} & \multicolumn{3}{l|}{\begin{tabular}[c]{@{}l@{}}1. Los datos del logro serán eliminados de la base de datos. \end{tabular}}                                               \\ \hline
+        \end{tabular}%
+    }
+\end{table}
+
+
 \section{Diagrama de Clases}
 Para finalizar esta sección, se muestra un primer diagrama de clases de nuestro proyecto, que nos permite ver las relaciones entre las diferentes clases
  que compondrán el sistema y que nos ayudará a entender mejor el funcionamiento del mismo. Para ello, primero se han identificado las entidades en 
