--- a/Memoria/capitulos/09_Conclusion.tex
+++ b/Memoria/capitulos/09_Conclusion.tex
@@ -15,22 +15,23 @@ los siguientes objetivos:
 
 El desarrollo de este proyecto ha sido una experiencia muy enriquecedora, ya que ha permitido aprender y poner en práctica muchos de los conocimientos adquiridos durante los cuatro años de grado. Además, me ha permitido afianzar mis habilidades de programación y aprender nuevas tecnologías y herramientas que no había utilizado anteriormente o de forma muy superficial.
 
-
 \section{Valoración personal}
 \label{sec:valoracion_personal}
 Mi experiencia con este proyecto ha sido muy positiva. Además de todos los conocimientos adquiridos, ha sido muy gratificante ver cómo poco a poco la aplicación iba tomando forma y se iba convirtiendo en lo que había imaginado al comienzo del proyecto. Aunque ha sido un proyecto muy ambicioso, he conseguido completarlo con éxito y estoy muy satisfecho con el resultado final.
-En cuanto al seguimiento del proyecto, también he logrado completar el proyecto en el tiempo estimado, aunque he tenido que dedicar más tiempo del esperado a la implementación de algunas funcionalidades, como por ejemplo la funcionalidad de preguntas de tipo \textit{micrófono} o a las pruebas de integración. 
+En cuanto al seguimiento del proyecto, también he logrado completar el proyecto en el tiempo estimado al principio del Sprint. Sin embargo, a veces he tenido que dedicar más tiempo del esperado a la implementación de algunas funcionalidades, como por ejemplo las preguntas de tipo \textit{micrófono} o a las pruebas de integración. 
 Considero que mi motivación durante todos los meses de trabajo se ha visto alzada por la temática y el dominio del proyecto, ya que desde pequeño he estado muy interesado en el aprendizaje musical y esta idea la llevaba pensando unos meses antes de comenzar con el proyecto. 
+
+
 \section{Trabajo futuro}
 \label{sec:trabajo_futuro}
 Aunque el proyecto ha sido completado con éxito, existen algunas funcionalidades que no han podido ser implementadas ni entraban en el alcance de este proyecto, pero que podrían ser implementadas en un futuro para mejorar la aplicación. Algunas de estas funcionalidades son:
 \begin{itemize}
-    \item \textbf{Sistema de tienda}: Se podría implementar un sistema de tienda, que permita a los usuarios canjear puntos por premios dentro de la aplicación (insignias, fondos, etc.)
-    \item \textbf{Sistema de amigos}: Se podría implementar un sistema de amigos, que permita a los usuarios añadir a otros usuarios como amigos y ver sus perfiles.
+    \item \textbf{Sistema de tienda}: para que los usuarios puedan canjear puntos por premios dentro de la aplicación (insignias, fondos, etc.)
+    \item \textbf{Sistema de amigos} que permita a los usuarios añadir a otros usuarios como amigos y ver sus perfiles.
     \item \textbf{Sistema de chat}: Se podría implementar un sistema de chat, que permita a los usuarios comunicarse entre ellos.
     \item \textbf{Sistema de comentarios}: Se podría implementar un sistema de comentarios, que permita a los usuarios comentar las lecciones y las preguntas o incluso sugerir nuevas preguntas para una lección.
-    \item \textbf{Sistema de estadísticas}: Se podría implementar un sistema de estadísticas, que permita a los usuarios ver sus estadísticas de progreso en el perfil de forma más detallada.
-    \item \textbf{Más tipos de preguntas}: Se podrían implementar más tipos de preguntas, como por ejemplo preguntas de tipo \textit{arrastrar y soltar} o preguntas de tipo \textit{piano} (tocar en un pequeño piano de la pantalla la(s) nota(s) que se pidan).
+    \item \textbf{Sistema de estadísticas} para que los usuarios puedan ver sus estadísticas de progreso en el perfil de forma más detallada.
+    \item \textbf{Más tipos de preguntas}, como por ejemplo preguntas de tipo \textit{arrastrar y soltar} o preguntas de tipo \textit{piano} (tocar en un pequeño piano de la pantalla la(s) nota(s) que se pidan).
 \end{itemize}
 
 Como toda aplicación, Meloudy continuará evolucionando y mejorando con el tiempo, pero por el momento se puede decir que el proyecto ha sido completado con éxito y que la aplicación está lista para ser utilizada por los usuarios sin ningún tipo de limitación.
