--- a/Memoria/prefacios/prefacio.tex
+++ b/Memoria/prefacios/prefacio.tex
@@ -1,30 +1,26 @@
 \chapter*{}
-%\thispagestyle{empty}
-%\cleardoublepage
-
-%\thispagestyle{empty}
-
-\input{portada/portada_2}
 
 
-
-\cleardoublepage
 \thispagestyle{empty}
 
 \begin{center}
-{\large\bfseries Aplicación multiplataforma para el aprendizaje del lenguaje musical: Subtítulo del proyecto}\\
+{\large\bfseries Aplicación multiplataforma para el aprendizaje del lenguaje musical: Meloudy}\\
 \end{center}
 \begin{center}
 Sergio Hervás Cobo\\
 \end{center}
 
 %\vspace{0.7cm}
-\noindent{\textbf{Palabras clave}: palabra\_clave1, palabra\_clave2, palabra\_clave3, ......}\\
+\noindent{\textbf{Palabras clave}: Aplicacion, Multiplataforma, Aprendizaje, Lenguaje Musical, Musica, Gamificación}\\
 
 \vspace{0.7cm}
 \noindent{\textbf{Resumen}}\\
+En los últimos años, debido a las necesidades provocadas por la COVID-19, ha surgido un gran número de aplicaciones móviles dedicadas al aprendizaje y la docencia por gamificación en distintos campos: matemáticas, idiomas, historia, arte... Sin embargo, no existen aplicaciones dedicadas al aprendizaje del lenguaje musical con un enfoque lúdico e interactivo.\\
 
-Poner aquí el resumen.
+La falta de aplicaciones de esta temática y el objetivo de fomentar el aprendizaje del lenguaje musical alejado de los métodos tradicionales, han sido los motivos principales para el desarrollo de este proyecto.\\
+
+Se ha desarrollado una aplicación multiplataforma para el aprendizaje del lenguaje musical, que permite a los usuarios aprender de forma interactiva y amena los conceptos básicos de la teoría musical con preguntas variadas y un sistema de logros para favorecer la motivación.
+
 \cleardoublepage
 
 
@@ -32,38 +28,45 @@ Poner aquí el resumen.
 
 
 \begin{center}
-{\large\bfseries Project Title: Project Subtitle}\\
+{\large\bfseries Multiplatform application for learning musical language: Meloudy }\\
 \end{center}
 \begin{center}
 Sergio Hervás Cobo\\
 \end{center}
 
 %\vspace{0.7cm}
-\noindent{\textbf{Keywords}: Keyword1, Keyword2, Keyword3, ....}\\
+\noindent{\textbf{Keywords}: Application, Multiplatform, Learning, Musical Language, Music, Gamification}\\
 
 \vspace{0.7cm}
 \noindent{\textbf{Abstract}}\\
 
-Write here the abstract in English.
+In recent years, due to the needs caused by COVID-19, a large number of mobile applications have emerged dedicated to gamification learning and teaching in different fields: mathematics, languages, history, art... 
+However, there are no applications dedicated to learning musical language with a playful and interactive approach.\\
+
+The lack of applications of this theme and the objective of promoting the learning of musical language away from traditional methods, have been the main reasons for the development of this project.\\
+
+A multi-platform application for learning musical language has been developed, which allows users to learn the basic concepts of music theory in an interactive and entertaining way with varied questions and an achievement system to promote motivation.
+
+
 
 \chapter*{}
 \thispagestyle{empty}
 
 \noindent\rule[-1ex]{\textwidth}{2pt}\\[4.5ex]
 
-Yo, \textbf{Nombre Apellido1 Apellido2}, alumno de la titulación TITULACIÓN de la \textbf{Escuela Técnica Superior
-de Ingenierías Informática y de Telecomunicación de la Universidad de Granada}, con DNI XXXXXXXXX, autorizo la
+Yo, \textbf{Sergio Hervás Cobo}, alumno de la titulación GRADO EN INGENIERÍA INFORMÁTICA de la \textbf{Escuela Técnica Superior
+de Ingenierías Informática y de Telecomunicación de la Universidad de Granada}, con DNI 77023574R, autorizo la
 ubicación de la siguiente copia de mi Trabajo Fin de Grado en la biblioteca del centro para que pueda ser
 consultada por las personas que lo deseen.
 
 \vspace{6cm}
 
-\noindent Fdo: Nombre Apellido1 Apellido2
+\noindent Fdo: Sergio Hervás Cobo
 
 \vspace{2cm}
 
 \begin{flushright}
-Granada a X de mes de 201 .
+Granada a 12 de Julio de 2023.
 \end{flushright}
 
 
@@ -72,11 +75,11 @@ Granada a X de mes de 201 .
 
 \noindent\rule[-1ex]{\textwidth}{2pt}\\[4.5ex]
 
-D. \textbf{Nombre Apellido1 Apellido2 (tutor1)}, Profesor del Área de XXXX del Departamento YYYY de la Universidad de Granada.
+D. \textbf{Luis López Escudero}, Profesor del Departamento de Lenguajes y Sistemas Informáticos de la Universidad de Granada.
 
 \vspace{0.5cm}
 
-D. \textbf{Nombre Apellido1 Apellido2 (tutor2)}, Profesor del Área de XXXX del Departamento YYYY de la Universidad de Granada.
+D. \textbf{Germán Arroyo Moreno}, Profesor del Departamento de Lenguajes y Sistemas Informáticos de la Universidad de Granada.
 
 
 \vspace{0.5cm}
@@ -85,13 +88,13 @@ D. \textbf{Nombre Apellido1 Apellido2 (tutor2)}, Profesor del Área de XXXX del 
 
 \vspace{0.5cm}
 
-Que el presente trabajo, titulado \textit{\textbf{Título del proyecto, Subtítulo del proyecto}},
-ha sido realizado bajo su supervisión por \textbf{Nombre Apellido1 Apellido2 (alumno)}, y autorizamos la defensa de dicho trabajo ante el tribunal
+Que el presente trabajo, titulado \textit{\textbf{Aplicación multiplataforma para el aprendizaje del lenguaje musical. Meloudy}},
+ha sido realizado bajo su supervisión por \textbf{Sergio Hervás Cobo}, y autorizamos la defensa de dicho trabajo ante el tribunal
 que corresponda.
 
 \vspace{0.5cm}
 
-Y para que conste, expiden y firman el presente informe en Granada a X de mes de 201 .
+Y para que conste, expiden y firman el presente informe en Granada a 12 de Julio de 2023 .
 
 \vspace{1cm}
 
@@ -99,13 +102,17 @@ Y para que conste, expiden y firman el presente informe en Granada a X de mes de
 
 \vspace{5cm}
 
-\noindent \textbf{Nombre Apellido1 Apellido2 (tutor1) \ \ \ \ \ Nombre Apellido1 Apellido2 (tutor2)}
+\noindent \textbf{Luis López Escudero \ \ \ \ \ Germán Arroyo Moreno}
 
 \chapter*{Agradecimientos}
 \thispagestyle{empty}
 
        \vspace{1cm}
 
+A mi madre, por su apoyo incondicional y por creer siempre en mí. 
 
-Poner aquí agradecimientos...
+A mi padre, porque aunque no esté aquí sé que estaría orgulloso de lo que he conseguido. 
 
+A Migue, mi pareja, por su paciencia durante los años de carrera y darme ánimos cuando más lo necesitaba. 
+
+A Luis López, mi tutor, por su ayuda y consejos durante el desarrollo de este proyecto. 
